<resources>
    <string name="app_name">CustomView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counter">Counter</string>
    <string name="donut">Donut</string>
    <string name="base">Base</string>
    <string name="icing">Icing</string>
    <string name="animate">Animate</string>
    <string name="button">Button</string>
    <string name="avd">AVD</string>
    <string name="widgets">Example Widgets</string>
    <string name="avd2">AVD2</string>
    <string name="digit_incrementer">Digit Incrementer</string>
    <string name="digit_scroller">Digit Scroller</string>
</resources>
