<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuMore"
        android:icon="@drawable/ic_menu"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menuCounter"
                android:title="@string/counter"
                app:showAsAction="never" />

            <item
                android:id="@+id/menuDonut"
                android:title="@string/donut"
                app:showAsAction="never" />

            <item
                android:id="@+id/menuButtons"
                android:title="@string/button"
                app:showAsAction="never" />

            <item
                android:id="@+id/menuAvd"
                android:title="@string/avd"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuAvd2"
                android:title="@string/avd2"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuScrollCounter"
                android:title="@string/scrolling_counter"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>