<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DonutFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:id="@+id/donutView"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:id="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonBar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:progress="80"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnBaseColor"
            android:text="@string/base"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnIcingColor"
            android:text="@string/icing"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnimate"
            android:text="@string/animate"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

